@@ -2,6 +2,7 @@
 Changes in version 0.7.4
 - Fixed bug in location osrelease.pl was being run
 - Fixed bug where JGeometryXML.cc wouldn't compile without XERCES
+- Allow user to force bitness of build using either m32=1 or m64=1
 
 Changes in version 0.7.3
 - Fixed issue with EVENTS_TO_SKIP only skipping EVENTS_TO_SKIP-1 events
